feat: Implementar clase SilhouetteAnalyzer para calcular coeficientes de silueta en conjuntos MedMNIST

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -607,6 +607,73 @@
   },
   {
    "cell_type": "markdown",
+   "id": "be05f64c",
+   "metadata": {},
+   "source": [
+    "## Coeficiente de silueta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3c060d05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from silhouette import SilhouetteAnalyzer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "830d451a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "analyzer = SilhouetteAnalyzer(['bloodmnist','breastmnist', 'chestmnist', 'dermamnist', 'octmnist', 'organamnist', 'organcmnist', 'organsmnist', 'pathmnist', 'pneumoniamnist','retinamnist','tissuemnist'], samples_per_dataset=1500)\n",
+    "score_classes = analyzer.mean_score(label_level=\"class\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8a6766fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Silhouette por clase: -0.304051011800766\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Silhouette por clase:\", score_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8833dc8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Silhouette por dataset: 0.01389302033931017\n"
+     ]
+    }
+   ],
+   "source": [
+    "score_dataset = analyzer.mean_score(label_level=\"dataset\")\n",
+    "print(\"Silhouette por dataset:\", score_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4efd36ef",
    "metadata": {},
    "source": [
