Ajuste de scripts en EDA

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -10,22 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fcaac384",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from EDA import (listar_datasets_medmnist, ejecutar_coleccion_medmnist)"
+    "from scripts.EDA import (listar_datasets_medmnist, ejecutar_coleccion_medmnist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "65398d7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from EDA import plot_imbalance_bar, plot_entropy_gini_scatter"
+    "from scripts.EDA import plot_imbalance_bar, plot_entropy_gini_scatter"
    ]
   },
   {
@@ -425,12 +425,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8ed069c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from TSNE import plot_tsne_clusters #Específico"
+    "from scripts.TSNE import plot_tsne_clusters #Específico"
    ]
   },
   {
@@ -473,12 +473,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c6b68422",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from TSNE2 import TSNEVisualizer"
+    "from scripts.TSNE2 import TSNEVisualizer"
    ]
   },
   {
@@ -615,12 +615,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3c060d05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from silhouette import SilhouetteAnalyzer\n"
+    "from scripts.silhouette import SilhouetteAnalyzer\n"
    ]
   },
   {
@@ -766,7 +766,7 @@
     }
    ],
    "source": [
-    "from EDA import ejecutar_coleccion_medmnist, plot_class_histograms\n",
+    "from scripts.EDA import ejecutar_coleccion_medmnist, plot_class_histograms\n",
     "df_resumen, obj_detallado = ejecutar_coleccion_medmnist(splits=(\"train\",))\n",
     "plot_class_histograms(obj_detallado, split=\"train\")"
    ]
@@ -797,7 +797,7 @@
     }
    ],
    "source": [
-    "from EDA import plot_rgb_channel_correlations # RGB\n",
+    "from scripts.EDA import plot_rgb_channel_correlations # RGB\n",
     "plot_rgb_channel_correlations(split=\"train\", sample_size=1000)\n"
    ]
   },
@@ -1077,7 +1077,7 @@
     }
    ],
    "source": [
-    "from CORR import correlation_between_datasets, plot_dataset_correlation_heatmap\n",
+    "from scripts.CORR import correlation_between_datasets, plot_dataset_correlation_heatmap\n",
     "\n",
     "df_corr = correlation_between_datasets(split=\"train\", sample_size=1000)\n",
     "\n",
