--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1191,7 +1191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "global",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1205,7 +1205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
